--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+<section class="top-banner">
+    <h1>Welcome To</h1>
+    <h1> <span class="cyan-color"> HaShaO</span> Comapny</h1>
+</section>
+<section class="flexible-container">
+    <div class="half-width">
+        <h3>About Ha</h3>
+        <p>
+            This is Ha aka Hasib (Hasibul Alam Olindo) 21 years male currently living in Dhaka, Bangladesh. He is a
+            brilliant boy with an excellent academic career and a doctor, studying at Netrokona Medical College.
+            Although he became my best friend in class 6, I knew him from class 5. We (I and Omio) are jealous of Hasib
+            over his chicks-slaying beard.
+        </p>
+        <a class="link-button" target="_blank" href="https://www.facebook.com/hasibul.alam.961556">Add
+            Hasib</a>
+    </div>
+    <div class="half-width">
+        <img src="images/hasib.png.png" alt="hasib's pic">
+    </div>
+</section>
 
 <body>
 
