1st-section-done

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<section class="top-banner">
-    <h1>Welcome To</h1>
-    <h1> <span class="cyan-color"> HaShaO</span> Comapny</h1>
-</section>
-<section class="flexible-container">
+<section class="top-banner flexible-container">
     <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1><span class="cyan-color">HaShaO</span> Comapny</h1>
         <h3>About Ha</h3>
         <p>
             This is Ha aka Hasib (Hasibul Alam Olindo) 21 years male currently living in Dhaka, Bangladesh. He is a
